This file lists all changes made to the game driver in all glory detail.
See the file HISTORY for a user-oriented summary of all the changes.

17-Jan-2008 (Fuchur)
  - (prolang.y)
    check return value of verify_declared() - fixes a crash in t-language
  - (backend.c, comm.c, interpret.c, object.c)
    call mark_(start|end)_evaluation() in various places (#476)

17-Jan-2009 (Gnomi)
  - (object.c)
    Save_object without a filename removed one too many elements
    from the stack. (Bug #595)
  
16-Jan-2009 (Zesstra)
  - (config.h.in, lex.c)
    Enforce the possible value range for ITABLE_SIZE (256 - SHRT_MAX/32768).
      Fixes issues of not finding identifiers in the table if the table is to
      large. (#558)
    Updated documentation in config.h.in to reflect this.
    Corrected the manpages for read_file(). (#592)

14-Jan-2009 (Gnomi)
  - (comm.c, pkg-mccp.c, configure)
    Use of write buffers without the need for threads.
  - (object.c)
    Made restore_value reentrant. (Bug #548)
  - (prolang.y)
    Removed useless code.
  
14-Jan-2009 (Zesstra)
  - (doc/driver/limitations)
    Started to assemble a list of non-configurable limits - to be extended...
  - (exec.h, object.c, closure.c, interpret.c)
    Changed some code defines from exec.h to static functions and
      constants to an enum.
    Introducing a properly typed CROSSDEF_NAME_OFFSET() solves crash on LP64
      platforms in functionlist(). (#559)
    Renamed SEARCH_FUNCTION_INHERIT to search_function_inherit and return the
      pointer to the inherit structure.
  - (smalloc.c)
    Fixed some warnings about wrong format specifiers reported by Bardioc.

13-Jan-2009 (Zesstra)
  - (simulate.c)
    Reallowed empty object names (/.c) (#525)

12-Jan-2009 (Lars Duening)  (3.3.718)
  - Created snapshot.

06 Jan 2009 (Fuchur)
  - (util/xerq/erq.c, util/xerq/defs.h)
    Remove dependency on the driver's random number generator - the
    libc one should serve us just fine.

04-Jan 2009 (Zesstra)