@@ -1,0 +1,18 @@
+SYNOPSIS
+        int get_eval_number()
+
+DESCRIPTION
+        Return the current evaluation number. It's incremented for each
+        top-level call. These are: commands, calls to heart_beat, reset,
+        or clean_up, and calls generated by call_out or input_to, master
+        applies triggered by external events, send_erq callbacks and the
+        calls to logon on player login.
+
+        Please note that the counter may overflow, especially on 32 bit
+        systems. As a result, it can also be negative.
+
+HISTORY
+        Since ldmud 3.3.719
+
+SEE ALSO
+        get_eval_cost()
