@@ -9070,6 +9070,24 @@ v_strftime(svalue_t *sp, int num_arg)
     return sp;
 } /* f_strftime() */
 
+/*-------------------------------------------------------------------------*/
+svalue_t *
+f_get_eval_number (svalue_t *sp)
+
+/* EFUN get_eval_number()
+ *
+ * Return the current evaluation number. It's incremented for each
+ * top-level call. Some examples are: commands, calls to heart_beat,
+ * reset, or clean_up, and calls generated by call_out or input_to.
+ *
+ * The counter may overflow.
+ */
+
+{
+    push_number(sp, eval_number);
+    return sp;
+} /* f_get_eval_number */
+
 /***************************************************************************/
 
 /*-------------------------------------------------------------------------*/
